<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="E_OCPP1_SampleState" Id="{02861149-f7c2-008c-34af-616a4d850115}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_OCPP1_SampleState :
(
	Init := 0,
	Idle,
	Authorize,
	Start,
	Charging,
	Stop,
	Unavailable,
	Error
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>